sync MainConfig